Arrays.asList used in repository